--- a/vignettes/ProFound-Complex-Fit.Rmd
+++ b/vignettes/ProFound-Complex-Fit.Rmd
@@ -17,41 +17,46 @@ install_github('asgr/ProFound')
 install_github('ICRAR/ProFit')
 ```
 
+Set global evaluate (basically TRUE for GitHub version and FALSE for CRAN):
+
+```{r}
+evalglobal=FALSE
+```
 
 First load the libraries we need:
 
-```{r, eval=FALSE}
+```{r, eval=evalglobal}
 library(ProFound)
 library(ProFit)
 ```
 
-```{r, eval=FALSE, fig.width=5, fig.height=5, dpi=40}
+```{r, eval=evalglobal, fig.width=5, fig.height=5, dpi=40}
 image=readFITS(system.file("extdata", 'VIKING/mystery_VIKING_Z.fits', package="ProFound"))
 profound=profoundProFound(image, magzero=30, verbose=TRUE, plot=TRUE, boundstats=TRUE, rotstats=TRUE)
 ```
 
 We can identify the large group of central potentially confused sources from the group output from **ProFound**:
 
-```{r, eval=FALSE}
+```{r, eval=evalglobal}
 profound$group$groupsegID[1,]
 ```
 
 The main group has 8 segments, which we can view easily:
 
-```{r, eval=FALSE, fig.width=5, fig.height=5, dpi=40}
+```{r, eval=evalglobal, fig.width=5, fig.height=5, dpi=40}
 magimage(profound$group$groupim==1)
 ```
 
 We can check the properties of the group 1 segments too:
 
-```{r, eval=FALSE}
+```{r, eval=evalglobal}
 group1segstats=profound$segstats[profound$segstats$segID %in% unlist(profound$group$groupsegID[1,"segID"]),]
 group1segstats
 ```
 
 In our Full Monty vignette example we detail how to extract a reasonable PSF. We use the solution here.
 
-```{r, eval=FALSE}
+```{r, eval=evalglobal}
 psf_modellist=list(
   moffat=list(
     xcen=75/2,
@@ -69,20 +74,20 @@ psf_model=profitMakeModel(modellist=psf_modellist, dim=c(75,75))$z
 
 We can see where this FWHM lies in comparison to the values estimated from **ProFound**.
 
-```{r, eval=FALSE, fig.width=5, fig.height=5, dpi=40}
+```{r, eval=evalglobal, fig.width=5, fig.height=5, dpi=40}
 maghist(profound$segstats$R50*2/0.339,breaks=20)
 abline(v=4.47, lty=2)
 ```
 
 Have a quick check:
 
-```{r, eval=FALSE, fig.width=5, fig.height=5, dpi=40}
+```{r, eval=evalglobal, fig.width=5, fig.height=5, dpi=40}
 magimage(psf_model)
 ```
 
 Let's try fitting all the sources as Sersic profiles!
 
-```{r, eval=FALSE}
+```{r, eval=evalglobal}
 group1_modellist=list(
   pointsource=list(
     xcen= group1segstats$xmax[1:3],
@@ -168,15 +173,15 @@ group1_tolog=list(
 ```
 
 
-```{r, eval=FALSE, fig.width=5, fig.height=5, dpi=40}
+```{r, eval=evalglobal, fig.width=5, fig.height=5, dpi=40}
 sigma=profoundMakeSigma(image$imDat, objects=profound$objects, gain=0.5, sky=profound$sky, skyRMS =profound$skyRMS, plot=TRUE)
 ```
 
-```{r, eval=FALSE}
+```{r, eval=evalglobal}
 group1_Data=profitSetupData(image$imDat-profound$sky, sigma=sigma, modellist=group1_modellist, tofit=group1_tofit, tolog=group1_tolog, intervals=group1_interval, magzero=30, algo.func='optim', psf=psf_model, region=matrix(profound$segim %in% unlist(profound$group$groupsegID[1,'segID'])[1:5], 356), verbose=FALSE)
 ```
 
-```{r, eval=FALSE, fig.width=8, fig.height=5, dpi=40}
+```{r, eval=evalglobal, fig.width=8, fig.height=5, dpi=40}
 profitLikeModel(parm=group1_Data$init, Data=group1_Data, makeplots=TRUE, plotchisq=TRUE)
 ```
 
@@ -196,7 +201,7 @@ That is looking pretty pretty pretty good. A bit of residual structure in the ce
 
 We can compare the inputs and outputs easily too:
 
-```{r, eval=FALSE}
+```{r, eval=evalglobal}
 group1_modellist_fit=profitRemakeModellist(parm=group1_fit$par, Data=group1_Data)$modellist
 group1_modellist_fit
 ```
