Mostly added Haralick feature option.
Also can specify R50clean in ProFound.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+v1.0.4
+
+Added Haralick features output to ProFound to help diagnose source issues.
+
 v1.0.2
 
 Does not run Example code that required EBImage.
