--- a/vignettes/ProFound-MultiBand-Stack.Rmd
+++ b/vignettes/ProFound-MultiBand-Stack.Rmd
@@ -10,7 +10,7 @@ vignette: >
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(eval=FALSE, echo = TRUE)
+knitr::opts_chunk$set(eval=FALSE)
 ```
 
 ```{r}
@@ -20,12 +20,16 @@ library(Rfits)
 
 ## R Markdown
 
+First we load some images.
+
 ```{r}
 im_r = Rfits_read_image(system.file("extdata", 'MultiBand/r.fits', package="ProFound"),ext=2)$imDat
 im_i = Rfits_read_image(system.file("extdata", 'MultiBand/i.fits', package="ProFound"),ext=2)$imDat
 im_Z = Rfits_read_image(system.file("extdata", 'MultiBand/Z.fits', package="ProFound"),ext=2)$imDat
 im_Y = Rfits_read_image(system.file("extdata", 'MultiBand/Y.fits', package="ProFound"),ext=2)$imDat
 ```
+
+Check them out.
 
 ```{r fig.height=5, fig.width=5}
 magimage(im_r)
@@ -34,6 +38,8 @@ magimage(im_Z)
 magimage(im_Y)
 ```
 
+We run ProFound in different modes in the optical and NIR. In the optical we want to detect right into the outskirts of faint extended sources, and in the NIR we want to avoid finding spurious objects in the very noisy regions we occassionally see (this is for WAVES image analysis, this particular frame is okay).
+
 ```{r}
 pro_r = profoundProFound(im_r, skycut=2, roughpedestal=T, grid=50, boxiters=4, verbose=F, SBdilate=2, box=200)
 pro_i = profoundProFound(im_i, skycut=2, roughpedestal=T, grid=50, boxiters=4, verbose=F, SBdilate=2, box=200)
@@ -41,12 +47,16 @@ pro_Z = profoundProFound(im_Z, skycut=5, sigma=5, roughpedestal=T, grid=50, boxi
 pro_Y = profoundProFound(im_Y, skycut=5, sigma=5, roughpedestal=T, grid=50, boxiters=4, verbose=F, SBdilate=2, box=200)
 ```
 
+We create a new sky map using a finer background to find the sharp undesired features.
+
 ```{r}
-sky_r = profoundMakeSkyGrid(im_r, objects=pro_r$objects_redo, doclip=T, grid=50, box=100, boxiters=4)
+sky_r = profoundMakeSkyGrid(im_r, objects=pro_r$objects_redo, doclip=T, grid=50, box=50, boxiters=4)
 sky_i = profoundMakeSkyGrid(im_i, objects=pro_i$objects_redo, doclip=T, grid=50, box=50, boxiters=4)
 sky_Z = profoundMakeSkyGrid(im_Z, objects=pro_Z$objects_redo, doclip=T, grid=50, box=50, boxiters=4)
 sky_Y = profoundMakeSkyGrid(im_Y, objects=pro_Y$objects_redo, doclip=T, grid=50, box=50, boxiters=4)
 ```
+
+We mask pixels out based on global statistics. For the optical we want to avoid the detector edges (so mask based on sky), whereas in the NIR we want to avoid the really noisy regions (so mask based on sky RMS).
 
 ```{r}
 mask_r = sky_r$sky > (median(sky_r$sky,na.rm=TRUE) + 0.5*(median(sky_r$sky,,na.rm=TRUE) - quantile(sky_r$sky,0.01,na.rm=TRUE)))
@@ -54,6 +64,8 @@ mask_i = sky_i$sky > (median(sky_i$sky,na.rm=TRUE) + 1*(median(sky_i$sky,na.rm=T
 mask_Z = sky_Z$skyRMS > (median(sky_Z$skyRMS,na.rm=TRUE) + 1*(median(sky_Z$skyRMS,na.rm=TRUE) - quantile(sky_Z$skyRMS,0.01,na.rm=TRUE)))
 mask_Y = sky_Y$skyRMS > (median(sky_Y$skyRMS,na.rm=TRUE) + 1*(median(sky_Y$skyRMS,na.rm=TRUE) - quantile(sky_Y$skyRMS,0.01,na.rm=TRUE)))
 ```
+
+We unmask based on a highly blurred r band image.
 
 ```{r}
 unmask = profoundImBlur(im_r,20) > 1e-11
@@ -69,6 +81,8 @@ magimage(pro_i$image); magimage(mask_i, magmap=F, col=c(NA,hsv(alpha=0.3)),add=T
 magimage(pro_Z$image); magimage(mask_Z, magmap=F, col=c(NA,hsv(alpha=0.3)),add=TRUE)
 magimage(pro_Y$image); magimage(mask_Y, magmap=F, col=c(NA,hsv(alpha=0.3)),add=TRUE)
 ```
+
+Now we can do some stacking. We try rZ, riZ and riZY variants.
 
 ```{r}
 stack_rZ = profoundMakeStack(image_list = list(pro_r$image, pro_Z$image), 
@@ -97,11 +111,15 @@ stack_riZY = profoundMakeStack(image_list = list(pro_r$image, pro_i$image, pro_Z
                          )
 ```
 
+Check out the different stacks. Overall, riZY looks best.
+
 ```{r fig.height=5, fig.width=5}
 magimage(stack_rZ$image)
 magimage(stack_riZ$image)
 magimage(stack_riZY$image)
 ```
+
+Run ProFound on the different detection images.
 
 ```{r}
 pro_detect_rZ = profoundProFound(stack_rZ$image, skycut=2, sky=0, grid=50, boxiters=4, SBdilate=2, tolerance=2, sigma=0.8)
@@ -109,11 +127,15 @@ pro_detect_riZ = profoundProFound(stack_riZ$image, skycut=2, sky=0, grid=50, box
 pro_detect_riZY = profoundProFound(stack_riZY$image, skycut=2, sky=0, grid=50, boxiters=4, SBdilate=2, tolerance=2, sigma=0.8)
 ```
 
+Check the summary plots.
+
 ```{r fig.height=5, fig.width=5}
 plot(pro_detect_rZ)
 plot(pro_detect_riZ)
 plot(pro_detect_riZY)
 ```
+
+Zoom in to an interesting region showing a variety of difficult detection issues. Again, riZY look to do the best overall.
 
 ```{r fig.height=5, fig.width=5}
 profoundSegimPlot(pro_detect_rZ$image[1000+ -500:499,700+ -500:499], segim=pro_detect_rZ$segim[1000+ -500:499,700+ -500:499])
